# cmake

./: CMakeLists.txt  runDemo.sh
src/: CMakeLists.txt  main.cpp
src/math/: CMakeLists.txt  MathFunctions.cpp
